--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.19.5",
+    "ethers": "^5.6.4",
     "next": "12.1.5",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "wagmi": "^0.2.26"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@types/node": "17.0.24",
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.0",
+    "chai": "^4.3.6",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "ethereum-waffle": "^3.4.4",
+    "hardhat": "^2.9.3",
     "typescript": "4.6.3"
   }
 }
